Add travis database config to basic config file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,10 @@ deploy:
   run:
     - "rake db:migrate"
     - "rake cleanup"
+addons:
+  postgresql: "9.3"
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
+script:
+  - rspec
