Change rspec execution line.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ deploy:
     branch: master
     repo: ezekielriva/save-my-money
   run:
-    - "rake db:migrate"
-    - "rake cleanup"
+    - bundle exec rake db:migrate
+    - bundle exec rake cleanup
 addons:
   postgresql: "9.3"
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
 script:
-  - rspec
+  - RAILS_ENV="test" RACK_ENV="test" bundle exec rspec -cfn spec
