--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ addons:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
+  - bundle exec rake db:migrate RAILS_ENV=test
 script:
   - RAILS_ENV="test" RACK_ENV="test" bundle exec rspec -cfn spec
